--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
         <p class="last-smile" data-node-name="outroSmiley">:)</p>
       </div>
     </div>
+
+    <audio autoplay loop controls style="display: none">
+      <source src="assets/music/song.mp3" />
+    </audio>
   </body>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
