--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
       </div>
     </div>
 
-    <audio autoplay loop controls style="display: none">
-      <source src="assets/music/song.mp3" />
+    <audio loop id="song">
+      <source src="assets/music/hbd.mp3" type="audio/mp3" />
     </audio>
   </body>
 
