--- a/index.html
+++ b/index.html
@@ -125,8 +125,12 @@
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
   </div>
+  <audio loop id="song">
+    <source src="birth.mp3" type="audio/mpeg">
+  </audio>
 </body>
 
+<script type="application/javascript" src="script/main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
 
